--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-router-hash-link": "^1.2.1",
+    "axios": "^0.19.2",
     "basikit": "^1.3.9",
     "feedback-fish": "^0.1.11",
     "lodash-es": "^4.17.15",
