--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "basikit": "^1.3.9",
     "feedback-fish": "^0.1.11",
     "lodash-es": "^4.17.15",
+    "mongodb": "^3.5.9",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-code-blocks": "^0.0.8",
